# Celka

./: CMakeLists.txt  README.md  gui.cpp  gui.hpp  gui.ui  main.cpp  resources.qrc  task_bilge_pump.c  task_bilge_pump.h  task_bilge_pump_control.c  task_bilge_pump_control.h  task_pump_controll.c  task_pump_controll.h
Python/: pump_tester.py
Python/Python-autonomik-init/: tutaj_testy.py  wandaGUIv2.py
Python/Python-autonomik-init/decoder/: __init__.py  serial_protocol_decoder.py
STM32/: .cproject  .mxproject  .project  Celka-pompy_zezowe.ioc
STM32/Core/Inc/: main.h  rbx_decoder.h  stm32f4xx_it.h  taskCommunication.h  task_bilge_pump.h  uart_control_msg.h  uart_interrupt.h
STM32/Core/Src/: freertos.c  gpio.c  main.c  rbx_decoder.c  stm32f4xx_it.c  taskCommunication.c  task_bilge_pump.c  uart_interrupt.c  usart.c
STM32/Debug/: Celka-pompy_zezowe.elf  Celka-pompy_zezowe.list  Celka-pompy_zezowe.map  makefile  objects.list
STM32/Debug/Core/Src/: freertos.d  freertos.su  main.d  main.su  rbx_decoder.d  rbx_decoder.su  stm32f4xx_hal_timebase_tim.d  stm32f4xx_it.d  stm32f4xx_it.su  subdir.mk  taskCommunication.d  taskCommunication.su  task_bilge_pump.d  task_bilge_pump.su  uart_interrupt.d  uart_interrupt.su
epaper/Fonts/: font32.c
resources/css/: lcd.css  main.css  progressBar.css  pushButton.css  switchButton.css
